# llm-hiermem

./: .env.example  .gitignore  README.md  cli.py  config.py  fix_datasets.py  multi_system_judge_prompt.txt  multi_system_judge_prompt_v1.txt  publish_results.py  pyproject.toml  recompute_metrics.py  requirements.txt  smoke_test.py  strip_for_multi_system.py
.github/workflows/: publish.yml
baselines/: __init__.py  memgpt_style.py  rag_baseline.py  rag_summary.py  raw_llm.py
core/: __init__.py  archive.py  assembler.py  constraint_store.py  curator.py  pipeline.py  post_processor.py
demo/: app.py
docs/: HierMem_Blueprint.docx  HierMem_Blueprint.md  architecture_diagram_prompt.md  overleaf_figure_guide.md  paper_evidence_notes.md  pypi_deployment_guide.md
eval/: __init__.py  cost_analysis.py  generate_ui_prompts.py  merge_laaj.py  metrics.py  normalize_datasets.py  paper_metrics.py  paper_plots.py  prepare_laaj_input.py  research_metrics.py  run_benchmark.py  run_improved_laaj.py  trim_results.py  visualize.py  visualize_codex.py
eval/datasets/constraint_tracking/: conversations.json  dataset_meta.json
eval/datasets/multistep_reasoning/: conversations.json  dataset_meta.json
eval/datasets/needle_in_haystack/: conversations.json  dataset_meta.json
eval/generators/: __init__.py  add_checkpoints.py  extract_chatgpt_export.py  generate_constraint_convos.py  generate_llm_convos.py  generate_multistep.py  generate_niah.py  generate_realistic_convos.py  postprocess_llm_convos.py
hiermem/: __init__.py  cli.py  config.py
hiermem/core/: archive.py  assembler.py  constraint_store.py  curator.py  pipeline.py  post_processor.py
hiermem/llm/: __init__.py  client.py
hiermem/llm/prompts/: curator_system.txt
hiermem/memory/: embedding.py  hierarchical_index.py  vector_store.py
hiermem/retrieval/: __init__.py  hierarchical.py  router.py  semantic.py
llm/: client.py  token_counter.py
llm/prompts/: constraint_extractor.txt  curator_system.txt  post_check.txt  summarizer.txt
memory/: __init__.py  embedding.py  vector_store.py
results/published/: leaderboard.json
results/raw/: metrics_rescored.json
results/raw/benchmarks/qwen14b_run/: results.json  (+4 more)
retrieval/: hierarchical.py  keyword.py  router.py  semantic.py
tests/: test_archive.py  test_assembler.py  test_constraint_store.py  test_metrics.py  test_retrieval.py
(+239 files in other folders)
